accepts dev --host url